合家云：前后端接口联调：社区资产模块（bug修改完善）；